tests/fixtures/invalid/duplicate_enum_variant.lby
enum Bad
    A
    A

fn main -> i64
    0
